--- a/src/main/webapp/css/da-design.css
+++ b/src/main/webapp/css/da-design.css
@@ -1020,6 +1020,7 @@ a.bt_blue:hover{padding:6px 14px 0px 14px; background:#1798d0; border:1px solid 
 
 .btn_inspect, .btn_decide, .btn_init {display:inline-block; border:1px solid #1d6ead; border-radius:28px; background:#2682ca; height:28px; padding:0px 20px 2px 20px; cursor:pointer; min-width:70px; color:#fff; font-weight:500;}
 .btn_inspect:hover, .btn_decide:hover, .btn_init:hover{background:#1d6ead;}
+.btn_inspect:disabled, .btn_decide:disabled, .btn_init:disabled {opacity: 0.6;  cursor: not-allowed;}
 
 .btn_excel_down{display:inline-block; border:1px solid #318f3e; border-radius:28px; background:url(../img/ic_excel.png) no-repeat 12px 7px; background-color:#44aa52; height:28px; padding:0px 20px 2px 30px; cursor:pointer; min-width:70px; color:#fff; font-weight:500; letter-spacing:-0.05em;}
 .btn_excel_down:hover{background-color:#318f3e;}
