--- a/src/main/webapp/css/da-design.css
+++ b/src/main/webapp/css/da-design.css
@@ -1018,9 +1018,13 @@ a.bt_blue:hover{padding:6px 14px 0px 14px; background:#1798d0; border:1px solid 
 .btn_reset, .btn_frm_reset, .btn_frm_save, .btn_search, .btn_apply, .btn_save, .btn_delete, .btn_inspect, .btn_decide, .btn_init {display:inline-block; border:1px solid #1d6ead; border-radius:28px; background:#2682ca; height:28px; padding:0px 20px 2px 20px; cursor:pointer; min-width:70px; color:#fff; font-weight:500;}
 .btn_reset:hover, .btn_frm_reset:hover, .btn_frm_save:hover, .btn_search:hover, .btn_apply:hover, .btn_save:hover, .btn_delete:hover, .btn_inspect:hover, .btn_decide:hover, .btn_init:hover{background:#1d6ead;}
 
-.btn_inspect, .btn_decide, .btn_init {display:inline-block; border:1px solid #1d6ead; border-radius:28px; background:#2682ca; height:28px; padding:0px 20px 2px 20px; cursor:pointer; min-width:70px; color:#fff; font-weight:500;}
-.btn_inspect:hover, .btn_decide:hover, .btn_init:hover{background:#1d6ead;}
-.btn_inspect:disabled, .btn_decide:disabled, .btn_init:disabled {opacity: 0.6;  cursor: not-allowed;}
+.btn_inspect, .btn_init {display:inline-block; border:1px solid #1d6ead; border-radius:28px; background:#2682ca; height:28px; padding:0px 20px 2px 20px; cursor:pointer; min-width:70px; color:#fff; font-weight:500;}
+.btn_inspect:hover, .btn_init:hover{background:#1d6ead;}
+.btn_inspect:disabled, .btn_init:disabled {opacity: 0.6;  cursor: not-allowed;}
+
+.btn_decide {display:inline-block; border:1px solid #ef3f3e; border-radius:28px; background:#ef3f3e; height:28px; padding:0px 20px 2px 20px; cursor:pointer; min-width:70px; color:#ffffff; font-weight:500;}
+.btn_decide:hover{background: #ef3f3e;}
+.btn_decide:disabled{opacity: 0.6;  cursor: not-allowed;}
 
 .btn_excel_down{display:inline-block; border:1px solid #318f3e; border-radius:28px; background:url(../img/ic_excel.png) no-repeat 12px 7px; background-color:#44aa52; height:28px; padding:0px 20px 2px 30px; cursor:pointer; min-width:70px; color:#fff; font-weight:500; letter-spacing:-0.05em;}
 .btn_excel_down:hover{background-color:#318f3e;}
